# docker-packing-box

./: .gitignore  .mkdocs.yml  .readthedocs.yml  CITATIONS.bib  Dockerfile  README.md  algorithms.yml  detectors.yml  mkdocs.yml  packers.yml  unpackers.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-documentation-request.yml  config.yml
docs/: CONTRIBUTING.md  PR_TEMPLATE_CONSOLE.md  PR_TEMPLATE_PACKER.md  PR_TEMPLATE_TOOL.md  executables.md  mkdocs.yml  packers.md
docs/pages/: cases.md  datasets.md  detectors.md  executables.md  index.md  quickstart.md  unpackers.md
docs/pages/internals/: datasets.md  detectors.md  executables.md  index.md  items.md  packers.md  unpackers.md
docs/pages/usage/: analysis.md  datasets.md  detectors.md  index.md  management.md  packers.md  training.md
files/: packers.csv  tools.csv
files/detectors/: bintropy  die  manalyze  peframe  peid  pepack  portex  pypeid  userdb_asl.txt
files/detectors/peid/: peid
files/lib/: README.md  setup.cfg
files/lib/bintropy/: __init__.py
files/lib/pbox/: __info__.py  __init__.py  packer.py  packers.py  utils.py
files/lib/pboxtools/: __init__.py  utils.py
files/packers/: ezuri
files/packers/Languages/: ENGLISH.LNG
files/term/: bash_aliases  bash_xvfb  bashrc  profile
files/tools/: dataset  dataset-maker  dataset-maker.py  detector  help  help.py  model  model-trainer  packer-installer  packer-tester  packers.py  packing-box  requirements.txt  startup
src/conf/: algorithms.yml  alterations.yml  analyzers.yml  detectors.yml  features.yml  modifiers.yml  packers.yml  references.yml  scenarios.yml  unpackers.yml
src/data/elf/: common_packer_section_names.txt  standard_section_names.txt
src/data/macho/: standard_section_names.txt
src/data/pe/: common_api_imports.txt  common_dll_imports.json  common_malicious_apis.txt  common_packer_section_names.txt  common_section_permissions.json  dead_code.txt  make-common-api-imports.py  standard_section_names.txt
src/data/prompt/: zero_shot_binary.txt
src/files/detectors/: binaryobjectscanner  bintropy  die  gettyp  manalyze  peframe  peid  pepack  portex  pypackerdetect  pypeid  reminder  retdec  unix-file  userdb.txt
src/files/packers/: elf_cryptor.py  elfuck  midgetpack  upx-3.00
src/lib/: README.md  pyproject.toml  setup.cfg
src/lib/pbox/common/: __init__.py  config.py  dataset.py  executable.py  item.py  parsers.py  utils.py
src/lib/pbox/common/modifiers/: __common__.py  __init__.py  parsers.py  pe.py
src/lib/pbox/items/: __common__.py  analyzer.py  detector.py  packer.py  unpacker.py
src/lib/pbox/learning/: __init__.py  algorithm.py  algorithms.py  dataset.py  executable.py  experiment.py  metrics.py  model.py  models.py  visualization.py
src/lib/pbox/learning/features/: __init__.py  common.py  pe.py  transformers.py
src/lib/pbox/learning/features/extractors/: __common__.py  __init__.py  pe.py
src/lib/pboxtools/: __init__.py
src/lib/src/pbox/: __conf__.py  __info__.py  __init__.py  constants.py  experiment.py
src/lib/src/pbox/common/: __init__.py  config.py  data.py  dataset.py  executable.py  item.py  rendering.py  utils.py  visualization.py
src/lib/src/pbox/common/alterations/: __init__.py  elf.py  macho.py  parsers.py  pe.py
src/lib/src/pbox/common/modifiers/: __common__.py  __init__.py  common_section_names_PE.txt  common_section_names_packers.txt  parsers.py  pe.py
src/lib/src/pbox/core/: __init__.py  config.py  dataset.py  executable.py  experiment.py  item.py  pipeline.py  plot.py  references.py  visualization.py
src/lib/src/pbox/core/alterations/: __init__.py  parsers.py
src/lib/src/pbox/core/alterations/modifiers/: __init__.py  elf.py  pe.py
src/lib/src/pbox/core/dataset/: __init__.py  plot.py  scoring.py  visualization.py
src/lib/src/pbox/core/executable/: __init__.py  alterations.py  cfg.py  features.py  parsers.py  visualization.py
src/lib/src/pbox/core/executable/cfg/: __common__.py  __init__.py  graph.py  node.py
src/lib/src/pbox/core/executable/extractors/: __common__.py  __init__.py  elf.py  macho.py  pe.py
src/lib/src/pbox/core/executable/modifiers/: __init__.py  macho.py  pe.py
src/lib/src/pbox/core/executable/parsers/: __common__.py  __init__.py
src/lib/src/pbox/core/executable/parsers/lief/: __common__.py  __init__.py  elf.py  macho.py  pe.py
src/lib/src/pbox/core/experiment/: __init__.py  scenario.py
src/lib/src/pbox/core/items/: __common__.py  __init__.py  analyzer.py  detector.py  packer.py  unpacker.py
src/lib/src/pbox/core/model/: __init__.py  explain.py  fuzz.py  metrics.py  visualization.py
src/lib/src/pbox/core/model/algorithm/: __init__.py  algoLLM.py  llm.py  weka.py
src/lib/src/pbox/core/model/algorithm/custom/: __init__.py  arora.py  bintropy.py  burgess.py  nataraj.py  oner.py  peprobe.py  perdisci.py  phad.py  reminder.py  sun.py  treadwell.py
src/lib/src/pbox/helpers/: __init__.py  archive.py  args.py  commands.py  config.py  data.py  entities.py  figure.py  files.py  formats.py  fuzzhash.py  items.py  mixins.py  rendering.py  utils.py
src/lib/src/pbox/items/: __common__.py  __init__.py  analyzer.py  detector.py  packer.py  unpacker.py
src/lib/src/pbox/learning/: __init__.py  dataset.py  executable.py  experiment.py  metrics.py  model.py  pipeline.py  plot.py  visualization.py
src/lib/src/pbox/learning/algorithm/: __init__.py  weka.py
src/lib/src/pbox/learning/features/: __init__.py
src/lib/src/pbox/learning/features/extractors/: __common__.py  __init__.py  elf.py  macho.py  pe.py
src/lib/src/pboxllm/: __init__.py  backend.py  formatter.py  strategy.py
src/lib/src/pboxllm/prompts/: few_shot_binary.txt
src/lib/src/pboxtools/: __init__.py  utils.py
src/term/: bash_aliases  bash_colors  bash_completion  bash_gitprompt  bash_tools  bash_update  bash_xvfb  bashrc  profile  pythonrc.py  viminfo
tests/: .init.sh  alteration.bats  dataset.bats  detector.bats  executable.bats  experiment.bats  feature.bats  install.sh  model.bats  packer.bats  packing-box.bats  startup.bats  unpacker.bats  visualizer.bats
(+61 files in other folders)
