[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "pbox.__info__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.so"]

[tool.system-requirements]
ubuntu = ["libfuzzy-dev"]

[project]
name = "packing-box"
authors = [
  {name="Alexandre D'Hondt", email="alexandre.dhondt@gmail.com"},
]
description = "Docker image gathering packers and tools for making datasets of packed executables"
license = {file = "LICENSE"}
keywords = ["python", "programming", "packing-detection", "pe", "elf", "mach-o"]
requires-python = ">=3.7,<4"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "bintropy>=1.5.7",
  "capstone",
  "dsff>=1.0.3",
  "exeplot>=0.4",
#  "filebytes",
  "lief>=0.14.0,<0.17",  # pinned under 0.17 because of lief.PE.SECTION_TYPES disappeared
  "malsearch>=0.2.1",
#  "macholibre@git+https://github.com/aaronst/macholibre.git",
#  "matplotlib<3.8",  # see: https://github.com/matplotlib/matplotlib/issues/27289
  "numpy<2",  # required until pandas>=2 gets compatible with numpy>=2
  "pandas>=2",
  "pefile",
  "peid>=2.0.0",
  "pyelftools",
  "pypcode",
  "python-tlsh",
  "scikit-learn>=1.3.2",
#  "scikit-learn-extra",  # see: https://github.com/scikit-learn-contrib/scikit-learn-extra/issues/180
  "scikit-learn-extra@git+https://github.com/TimotheeMathieu/scikit-learn-extra.git",
  "seaborn",
  "tabulate",
  "tinyscript>=1.30.26",
  "treelib",
  "weka",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
list-all-algorithms = "pboxtools.utils:list_all_algorithms"
list-all-alterations = "pboxtools.utils:list_all_alterations"
list-all-analyzers = "pboxtools.utils:list_all_analyzers"
list-all-detectors = "pboxtools.utils:list_all_detectors"
list-all-features = "pboxtools.utils:list_all_features"
list-all-packers = "pboxtools.utils:list_all_packers"
list-all-scenarios = "pboxtools.utils:list_all_scenarios"
list-all-unpackers = "pboxtools.utils:list_all_unpackers"
list-config-keys = "pboxtools.utils:list_config_keys"
list-datasets = "pboxtools.utils:list_datasets"
list-datasets-with-files = "pboxtools.utils:list_datasets_with_files"
list-enabled-alterations = "pboxtools.utils:list_enabled_alterations"
list-enabled-features = "pboxtools.utils:list_enabled_features"
list-experiments = "pboxtools.utils:list_experiments"
list-experiment-configs = "pboxtools.utils:list_experiment_configs"
list-models = "pboxtools.utils:list_models"
list-tools = "pboxtools.utils:list_tools"
list-working-analyzers = "pboxtools.utils:list_working_analyzers"
list-working-detectors = "pboxtools.utils:list_working_detectors"
list-working-packers = "pboxtools.utils:list_working_packers"
list-working-unpackers = "pboxtools.utils:list_working_unpackers"

[project.urls]
documentation = "https://docker-packing-box.readthedocs.io/en/latest/?badge=latest"
homepage = "https://github.com/packing-box/docker-packing-box"
issues = "https://github.com/packing-box/docker-packing-box/issues"
repository = "https://github.com/packing-box/docker-packing-box"
