[metadata]
name = packing-box
version = file: pbox/VERSION.txt
author = Alexandre D'Hondt
author_email = alexandre.dhondt@gmail.com
url = https://github.com/dhondta/docker-packing-box
description = Docker image gathering packers and tools for making datasets of packed executables
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    programming
    packing-detection
    pe
    elf
    mach-o
license = GPLv3
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False
install_requires =
    bintropy
    capstone
    dsff
    lief
    pandas>=1.5.0
    peid
    plotext
    pyelftools
    sklearn
    tinyscript>=1.26.12
    weka
setup_requires = setuptools
python_requires = >=3.6.*,<4
